k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: collab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 686061661335.dkr.ecr.ap-southeast-2.amazonaws.com/codie-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
