k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: collab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 686061661335.dkr.ecr.ap-southeast-2.amazonaws.com/codie-client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
