k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: collab
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
