k8s/codie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codie-ingress
  namespace: collab
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:686061661335:certificate/25c49434-2d51-4d58-a989-c98f30ad49f3
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: codiehub.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
